# pepedata

./: .env-template  README.md  docker-compose.yaml
planka-service/: Dockerfile  pyproject.toml
planka-service/app/: config.py  dependencies.py  main.py
planka-service/app/config/: templates.json
planka-service/app/internal/: api.py  plankapy.py  updater.py
planka-service/app/routers/: updates.py
planka-service/app/stores/: database.py  models.py  schemas.py
planka-service/migrations/: env.py
planka-service/migrations/versions/: 1977996d50f4_init_migration.py  e2ef3dfed95a_init_migration.py  f575bfee84a9_init_migration.py
