[tool.poetry]
name = "planka-service"
version = "0.1.0"
description = ""
authors = ["Irishery <markirill21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.31"
requests = "^2.32.3"
pydantic = "^2.8.2"
databases = "^0.9.0"
asyncpg = "^0.29.0"
httpx = "^0.27.0"
uvicorn = "^0.30.1"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
